<resources>
    <string name="app_name">Kata Hati</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_short">Sign in</string>
    <string name="welcoe">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="donthave">"Don't have an account yet?"</string>
    <string name="tv_register">"Click Here"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="story">Story</string>
    <string name="settings">Settings</string>
    <string name="add_story">Add Story</string>
    <string name="desc_hati">Tell me what happen…</string>
    <string name="file">File</string>
    <string name="tambah_foto">Photo</string>
    <string name="camera">Camera</string>
    <string name="post">POSTING</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="join_us">JOIN US!</string>
    <string name="change_language">Change Language</string>
    <string name="eight_char">8 Characters Minimum</string>
</resources>